add toaster and gloabal error handling ,add broker signup

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tanstack/react-query-devtools": "^5.90.2",
     "@types/js-cookie": "^3.0.6",
     "js-cookie": "^3.0.5",
+    "react-hot-toast": "^2.5.1",
     "lucide-react": "^0.546.0",
     "msw": "^2.11.6",
     "react": "^19.1.1",
